--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -331,16 +331,16 @@ RecentlyPlaced=/Game/ThirdPerson/Particles/Snow_Particle.Snow_Particle;
 [DetailPropertyExpansion]
 ParticleModuleSpawn="Object.Spawn.Rate.Distribution" "Object.Spawn.RateScale.Distribution" "Object.Burst.BurstScale.Distribution" 
 ParticleModuleSpawnBase="Object.Spawn.Rate.Distribution" "Object.Spawn.RateScale.Distribution" "Object.Burst.BurstScale.Distribution" 
-ParticleModule="Object.Spawn.Rate.Distribution" "Object.Spawn.RateScale.Distribution" "Object.Burst.BurstScale.Distribution" 
+ParticleModule=
 Object=
 ParticleModuleVelocity=Object.Velocity.StartVelocity.Distribution" "Object.Velocity.StartVelocityRadial" "Object.Velocity.StartVelocityRadial.Distribution
 ParticleModuleVelocityBase=Object.Velocity.StartVelocity.Distribution" "Object.Velocity.StartVelocityRadial" "Object.Velocity.StartVelocityRadial.Distribution
-ParticleModuleColorOverLife="Object.Color.ColorOverLife" "Object.Color.ColorOverLife.Distribution" "Object.Color.AlphaOverLife.Distribution" 
-ParticleModuleColorBase="Object.Color.ColorOverLife" "Object.Color.ColorOverLife.Distribution" "Object.Color.AlphaOverLife.Distribution" 
-ParticleModuleSize="Object.Size.StartSize" "Object.Size.StartSize.Distribution" 
-ParticleModuleSizeBase="Object.Size.StartSize" "Object.Size.StartSize.Distribution" 
-ParticleModuleLifetime="Object.Lifetime.Lifetime" "Object.Lifetime.Lifetime.Distribution" 
-ParticleModuleLifetimeBase="Object.Lifetime.Lifetime" "Object.Lifetime.Lifetime.Distribution" 
+ParticleModuleColorOverLife="Object.Color.ColorOverLife.Distribution" "Object.Color.AlphaOverLife.Distribution" 
+ParticleModuleColorBase="Object.Color.ColorOverLife.Distribution" "Object.Color.AlphaOverLife.Distribution" 
+ParticleModuleSize="Object.Size.StartSize.Distribution" 
+ParticleModuleSizeBase="Object.Size.StartSize.Distribution" 
+ParticleModuleLifetime="Object.Lifetime.Lifetime.Distribution" 
+ParticleModuleLifetimeBase="Object.Lifetime.Lifetime.Distribution" 
 ParticleModuleCollision=Object.Collision.DampingFactor.Distribution" "Object.Collision.DampingFactorRotation" "Object.Collision.DampingFactorRotation.Distribution" "Object.Collision.MaxCollisions.Distribution" "Object.Collision.ParticleMass.Distribution" "Object.Collision.DelayAmount.Distribution
 ParticleModuleCollisionBase=Object.Collision.DampingFactor.Distribution" "Object.Collision.DampingFactorRotation" "Object.Collision.DampingFactorRotation.Distribution" "Object.Collision.MaxCollisions.Distribution" "Object.Collision.ParticleMass.Distribution" "Object.Collision.DelayAmount.Distribution
 ParticleModuleBeamSource=Object.Source.Source.Distribution" "Object.Source.SourceTangent.Distribution" "Object.Source.SourceStrength.Distribution
@@ -350,12 +350,12 @@ ParticleModuleBeamNoise=Object.LowFreq.NoiseRange.Distribution" "Object.LowFreq.
 ParticleModuleColor=Object.Color.StartColor" "Object.Color.StartColor.Distribution" "Object.Color.StartAlpha.Distribution
 ParticleModuleTypeDataBeam2=Object.Distance.Distance" "Object.Distance.Distance.Distribution" "Object.Taper.TaperFactor" "Object.Taper.TaperFactor.Distribution" "Object.Taper.TaperScale" "Object.Taper.TaperScale.Distribution
 ParticleModuleTypeDataBase=
-Brush="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
+Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 EditorNotifyObject=
 EditorAnimBaseObj=
 
 [DetailCustomWidgetExpansion]
-ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.Points,
+ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Points,ParticleModuleColorOverLife.Color.Distribution,
 ParticleModuleColor=ParticleModuleColor.Color.Distribution,
 
 [RootWindow]
@@ -856,10 +856,24 @@ NotifyTimingNodeColor=(R=1.000000,G=0.000000,B=0.000000,A=1.000000)
 BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499983 R=0.000000
 PrimType=1
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
 
