--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -115,6 +115,12 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin
+OpenAssetsAtExit=/Game/Mannequin/Animations/ThirdPersonRun.ThirdPersonRun
+OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton
+OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin
+OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton
+OpenAssetsAtExit=/Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP
 
 [PathColor]
 /Game/ThirdPerson/Particles=(R=0.000000,G=0.026608,B=0.500000,A=1.000000)
@@ -332,7 +338,7 @@ RecentlyPlaced=/Game/ThirdPerson/Particles/Snow_Particle.Snow_Particle;
 ParticleModuleSpawn="Object.Spawn.Rate.Distribution" "Object.Spawn.RateScale.Distribution" "Object.Burst.BurstScale.Distribution" 
 ParticleModuleSpawnBase="Object.Spawn.Rate.Distribution" "Object.Spawn.RateScale.Distribution" "Object.Burst.BurstScale.Distribution" 
 ParticleModule=
-Object=
+Object="Object.Event.Event" 
 ParticleModuleVelocity=Object.Velocity.StartVelocity.Distribution" "Object.Velocity.StartVelocityRadial" "Object.Velocity.StartVelocityRadial.Distribution
 ParticleModuleVelocityBase=Object.Velocity.StartVelocity.Distribution" "Object.Velocity.StartVelocityRadial" "Object.Velocity.StartVelocityRadial.Distribution
 ParticleModuleColorOverLife="Object.Color.ColorOverLife.Distribution" "Object.Color.AlphaOverLife.Distribution" 
@@ -351,8 +357,8 @@ ParticleModuleColor=Object.Color.StartColor" "Object.Color.StartColor.Distributi
 ParticleModuleTypeDataBeam2=Object.Distance.Distance" "Object.Distance.Distance.Distribution" "Object.Taper.TaperFactor" "Object.Taper.TaperFactor.Distribution" "Object.Taper.TaperScale" "Object.Taper.TaperScale.Distribution
 ParticleModuleTypeDataBase=
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
-EditorNotifyObject=
-EditorAnimBaseObj=
+EditorNotifyObject="Object.Event.Event" 
+EditorAnimBaseObj="Object.Event.Event" 
 
 [DetailCustomWidgetExpansion]
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Points,ParticleModuleColorOverLife.Color.Distribution,
