--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,7 +91,7 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Particles
+ContentBrowserTab1.SelectedPaths=/Game/Mannequin/Animations
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -114,12 +114,11 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Mannequin/Animations/ThirdPersonRun.ThirdPersonRun
 OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton
 OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin
-OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 OpenAssetsAtExit=/Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP
 
 [PathColor]
@@ -273,14 +272,14 @@ InterpTrackMove.InterpTrackMove=True
 InterpTrackMove.InterpTrack=True
 InterpTrackEvent.InterpTrackEvent=True
 InterpTrackEvent.InterpTrack=True
-AnimSequence.Animation=True
-AnimSequence.AdditiveSettings=True
-AnimSequence.Compression=True
-AnimSequence.RootMotion=True
-AnimSequence.ImportSettings=True
-AnimSequence.Transform=True
-AnimSequence.MetaData=True
-AnimSequence.Thumbnail=True
+AnimSequence.Animation=False
+AnimSequence.AdditiveSettings=False
+AnimSequence.Compression=False
+AnimSequence.RootMotion=False
+AnimSequence.ImportSettings=False
+AnimSequence.Transform=False
+AnimSequence.MetaData=False
+AnimSequence.Thumbnail=False
 EditorNotifyObject.AnimNotify=True
 EditorNotifyObject.Trigger Settings=True
 EditorNotifyObject.Event=True
@@ -303,6 +302,15 @@ PreviewMaterial.MaterialInterface=True
 PreviewMaterial.Thumbnail=True
 MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
 MaterialExpressionTextureCoordinate.MaterialExpression=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+ThirdPersonCharacter_C.Default=True
+ThirdPersonCharacter_C.Tick=True
+ThirdPersonCharacter_C.Replication=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Particles/My_custom_Particle.My_custom_Particle=1
@@ -338,7 +346,7 @@ RecentlyPlaced=/Game/ThirdPerson/Particles/Snow_Particle.Snow_Particle;
 ParticleModuleSpawn="Object.Spawn.Rate.Distribution" "Object.Spawn.RateScale.Distribution" "Object.Burst.BurstScale.Distribution" 
 ParticleModuleSpawnBase="Object.Spawn.Rate.Distribution" "Object.Spawn.RateScale.Distribution" "Object.Burst.BurstScale.Distribution" 
 ParticleModule=
-Object="Object.Event.Event" 
+Object=
 ParticleModuleVelocity=Object.Velocity.StartVelocity.Distribution" "Object.Velocity.StartVelocityRadial" "Object.Velocity.StartVelocityRadial.Distribution
 ParticleModuleVelocityBase=Object.Velocity.StartVelocity.Distribution" "Object.Velocity.StartVelocityRadial" "Object.Velocity.StartVelocityRadial.Distribution
 ParticleModuleColorOverLife="Object.Color.ColorOverLife.Distribution" "Object.Color.AlphaOverLife.Distribution" 
@@ -881,5 +889,28 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bShowEmptySections=True
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+SaveOnCompile=SoC_Always
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
 
